--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-decorations-part/ms-decorations-part.component.html
@@ -90,6 +90,7 @@
             [decoration]="editedDecoration"
             [decArtTypeEntries]="decArtTypeEntries"
             [decElemTypeEntries]="decElemTypeEntries"
+            [decFlagEntries]="decFlagEntries"
             [decElemFlagEntries]="decElemFlagEntries"
             [decElemColorEntries]="decElemColorEntries"
             [decElemGildingEntries]="decElemGildingEntries"
