Fixes to person works part

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-work/person-work.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-work/person-work.component.html
@@ -91,7 +91,7 @@
     <!-- chronotopes -->
     <h3>chronotopes</h3>
     <itinera-chronotopes
-      [chronotopes]="chronotopes"
+      [chronotopes]="chronotopes?.value"
       [tagEntries]="ctTagEntries"
       [docRefTagEntries]="tagEntries"
       (chronotopesChange)="onChronotopesChange($event)"
