Replaced MS layout formula in part editor

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layout/ms-layout.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layout/ms-layout.component.html
@@ -220,6 +220,7 @@
             "
             >invalid formula</mat-error
           >
+          <mat-error *ngIf="formulaError">{{formulaError}}</mat-error>
         </mat-form-field>
       </form>
     </div>
