--- a/src/app/sub-editors-demo/sub-editors-demo.component.html
+++ b/src/app/sub-editors-demo/sub-editors-demo.component.html
@@ -144,6 +144,13 @@
           <pre>{{ id }}</pre>
         </div>
       </mat-tab>
+
+      <mat-tab label="MS Layout Figure">
+        <itinera-ms-layout-figure
+          [rects]="rectSet"
+          [size]="{ height: 400, width: 300 }"
+        ></itinera-ms-layout-figure>
+      </mat-tab>
     </mat-tab-group>
   </mat-card-content>
 </mat-card>
