Binding size of MS layout figure

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/ms-layout-figure/ms-layout-figure.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/ms-layout-figure/ms-layout-figure.component.html
@@ -1,6 +1,7 @@
 <div>
-  <!-- <svg [attr.viewbox]="viewbox" [attr.width]="width" [attr.height]="height"></svg> -->
-  <svg [attr.width]="width" [attr.height]="height">
+  <!-- [attr.width.px]="width"
+  [attr.height.px]="height" -->
+  <svg #fig>
     <g>
       <!-- height -->
       <g *ngIf="heightVisible?.value">
