--- a/src/app/sub-editors-demo/sub-editors-demo.component.html
+++ b/src/app/sub-editors-demo/sub-editors-demo.component.html
@@ -149,6 +149,7 @@
         <itinera-ms-layout-figure
           [rects]="rectSet"
           [size]="{ height: 400, width: 300 }"
+          [noScale]="true"
         ></itinera-ms-layout-figure>
       </mat-tab>
     </mat-tab-group>
