MS layout figure

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/ms-layout-figure/ms-layout-figure.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/ms-layout-figure/ms-layout-figure.component.html
@@ -1,40 +1,38 @@
-<div>
-  <!-- [attr.width.px]="width"
+<!-- [attr.width.px]="width"
   [attr.height.px]="height" -->
-  <svg #fig>
-    <g>
-      <!-- height -->
-      <g *ngIf="heightVisible?.value">
-        <rect
-          *ngFor="let r of heightRects"
-          [attr.x]="r.x"
-          [attr.y]="r.y"
-          [attr.width]="r.width"
-          [attr.height]="r.height"
-          [attr.fill]="r.fill"
-          [attr.title]="r.name"
-          stroke="#a0a0a0"
-        ></rect>
-      </g>
-
-      <!-- width -->
-      <g *ngIf="widthVisible?.value" opacity="0.7">
-        <rect
-          *ngFor="let r of widthRects"
-          [attr.x]="r.x"
-          [attr.y]="r.y"
-          [attr.width]="r.width"
-          [attr.height]="r.height"
-          [attr.fill]="r.fill"
-          [attr.title]="r.name"
-          stroke="#a0a0a0"
-        ></rect>
-      </g>
+<svg
+  #fig
+  preserveAspectRatio="xMidYMid meet"
+  [attr.viewBox]="viewbox"
+  (click)="onSvgClick()"
+>
+  <g>
+    <!-- height -->
+    <g *ngIf="visMode === 1 || visMode === 3">
+      <rect
+        *ngFor="let r of heightRects"
+        [attr.x]="r.x"
+        [attr.y]="r.y"
+        [attr.width]="r.width"
+        [attr.height]="r.height"
+        [attr.fill]="r.fill"
+        [attr.title]="r.name"
+        stroke="#a0a0a0"
+      ></rect>
     </g>
-  </svg>
-  <div>
-    <mat-checkbox [formControl]="heightVisible">height</mat-checkbox>
-    &nbsp;
-    <mat-checkbox [formControl]="widthVisible">width</mat-checkbox>
-  </div>
-</div>
+
+    <!-- width -->
+    <g *ngIf="visMode >= 2" opacity="0.7">
+      <rect
+        *ngFor="let r of widthRects"
+        [attr.x]="r.x"
+        [attr.y]="r.y"
+        [attr.width]="r.width"
+        [attr.height]="r.height"
+        [attr.fill]="r.fill"
+        [attr.title]="r.name"
+        stroke="#a0a0a0"
+      ></rect>
+    </g>
+  </g>
+</svg>
