--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-quires-part/ms-quires-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-quires-part/ms-quires-part.component.html
@@ -24,7 +24,7 @@
             <textarea
               matInput
               [formControl]="formula"
-              placeholder="formula"
+              placeholder="formula (e.g. 1-6^4+2 7-10^4 11-17^8-1)"
               rows="3"
             ></textarea>
           </mat-form-field>
