--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/ms-layout-figure/ms-layout-figure.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/ms-layout-figure/ms-layout-figure.component.html
@@ -2,6 +2,8 @@
   [attr.height.px]="height" -->
 <svg
   #fig
+  width="100%"
+  height="100%"
   preserveAspectRatio="xMidYMid meet"
   [attr.viewBox]="viewbox"
   (click)="onSvgClick()"
