--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,13 @@
-#banner {
+.banner {
   height: 258px;
-  background-image: url("/assets/img/banner.png");
-  background-size: cover;
   margin-bottom: 16px;
 }
-#banner h1 {
+.banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.banner h1 {
   position: relative;
   padding-top: 60px;
   width: auto;
