--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,28 @@
 footer {
-  background-color: #f9f9f9;
   color: #808080;
   padding: 4px;
   text-align: center;
   margin-top: 8px;
-  padding-top: 8px;
+  border-top: 1px solid #f0f0f0;
+  padding-top: 16px;
   font-size: 95%;
+}
+
+footer div.footer-container {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 8px;
+  justify-items: center;
+  align-items: center;
+  grid-template-areas: "logo info"
+}
+
+footer div.logo {
+  grid-area: logo;
+}
+
+footer div.info {
+  grid-area: info;
 }
 
 footer a {
