--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,8 +79,11 @@
 </main>
 
 <footer>
-  <div layout="row" layout-align="center center">
-    <p>
+  <div class="footer-container">
+    <div class="logo">
+      <img src="./assets/img/banner-200.jpg" />
+    </div>
+    <div class="info">
       <a href="https://www.unisi.it" target="_blank"
         >Università degli Studi di Siena</a
       >
@@ -99,6 +102,6 @@
       - Cadmus by
       <a href="https://www.fusisoft.net" target="_blank">Daniele Fusi</a> at
       <a href="https://www.unive.it/pag/39287" target="_blank">VeDPH</a>
-    </p>
+    </div>
   </div>
 </footer>
