--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,5 @@
-.banner {
-  height: 258px;
+#banner {
   margin-bottom: 16px;
-}
-.banner-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 h1 {
   position: relative;
