--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,24 +84,30 @@
       <img src="./assets/img/banner-200.jpg" />
     </div>
     <div class="info">
-      <a href="https://www.unisi.it" target="_blank"
-        >Università degli Studi di Siena</a
-      >
-      -
-      <a href="https://www.uniroma3.it" target="_blank"
-        >Università degli Studi Roma Tre</a
-      >
-      -
-      <a href="https://www.unina.it" target="_blank"
-        >Università degli Studi di Napoli Federico II</a
-      >
-      -
-      <a href="https://www.unistrapg.it" target="_blank"
-        >Università per Stranieri di Perugia</a
-      >
-      - Cadmus by
-      <a href="https://www.fusisoft.net" target="_blank">Daniele Fusi</a> at
-      <a href="https://www.unive.it/pag/39287" target="_blank">VeDPH</a>
+      <p>
+        Petrarch’s ITINERA: Italian Trecento Intellectual Network and European
+        Renaissance Advent
+      </p>
+      <p>
+        <a href="https://www.unisi.it" target="_blank"
+          >Università degli Studi di Siena</a
+        >
+        -
+        <a href="https://www.uniroma3.it" target="_blank"
+          >Università degli Studi Roma Tre</a
+        >
+        -
+        <a href="https://www.unina.it" target="_blank"
+          >Università degli Studi di Napoli Federico II</a
+        >
+        -
+        <a href="https://www.unistrapg.it" target="_blank"
+          >Università per Stranieri di Perugia</a
+        >
+        - Cadmus by
+        <a href="https://www.fusisoft.net" target="_blank">Daniele Fusi</a> at
+        <a href="https://www.unive.it/pag/39287" target="_blank">VeDPH</a>
+      </p>
     </div>
   </div>
 </footer>
