--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
@@ -93,6 +93,7 @@
     </mat-form-field>
   </div>
   <!-- sources -->
+  <h3>sources</h3>
   <cadmus-doc-references
     [tagEntries]="docRefTagEntries"
     [references]="initialSources"
