--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-restoration/ms-restoration.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-restoration/ms-restoration.component.html
@@ -60,6 +60,7 @@
     </mat-form-field>
   </div>
   <!-- sources -->
+  <h3>sources</h3>
   <cadmus-doc-references
     [tagEntries]="docRefTagEntries"
     [references]="initialSources"
